<resources>
    <!-- Nome do App -->
    <string name="app_name">EmoTrack</string>

    <!-- Título do formulário -->
    <string name="titulo_form">EmoTrack</string>

    <!-- Labels -->
    <string name="label_sentimento">Como você está se sentindo?</string>
    <string name="label_fator">Cenário:</string>
    <string name="label_evento_marcante">Este foi um evento marcante?</string>
    <string name="label_observacoes">Observações:</string>

    <!-- Hint -->
    <string name="hint_observacoes">Digite aqui suas observações...</string>

    <!-- Sentimentos -->
    <string name="sent_feliz">Feliz</string>
    <string name="sent_triste">Triste</string>
    <string name="sent_ansioso">Ansioso</string>
    <string name="sent_estressado">Estressado</string>
    <string name="sent_calmo">Calmo</string>
    <string name="sent_outro">Outro</string>

    <!-- Botões -->
    <string name="btn_limpar">Limpar</string>
    <string name="btn_salvar">Salvar</string>

    <!-- Toasts -->
    <string name="toast_salvo">Registro salvo com sucesso!</string>
    <string name="toast_limpo">Formulário limpo!</string>
    <string name="toast_erro_preenchimento">Por favor, preencha todos os campos obrigatórios.</string>
    <string name="toast_erro_radio">Por favor, selecione um sentimento!</string>
    <string name="toast_erro_obs">Por favor, preencha as observações!</string>
    <string name="autoria">Autor: Stefano Calheiros Stringhini</string>
    <string name="Email">Email: stefanoc.stringhini@gmail.com</string>

    <!-- Nomes dos sentimentos -->
    <string-array name="sentimentos_nomes">
        <item>Feliz</item>
        <item>Triste</item>
        <item>Ansioso</item>
        <item>Estressado</item>
        <item>Calmo</item>
        <item>Animado</item>
        <item>Cansado</item>
        <item>Motivado</item>
        <item>Confuso</item>
        <item>Outro</item>
    </string-array>

    <!-- Fatores -->
    <string-array name="sentimentos_fatores">
        <item>Família</item>
        <item>Trabalho</item>
        <item>Estudos</item>
        <item>Saúde</item>
        <item>Amigos</item>
        <item>Lazer</item>
        <item>Relacionamentos</item>
        <item>Finanças</item>
        <item>Ambiente</item>
        <item>Clima</item>
    </string-array>

    <!-- Descrições -->
    <string-array name="sentimentos_descricoes">
        <item>Bolsonaro Preso</item>
        <item>Escala 6x1 eu não tanko não</item>
        <item>Quero meu diploma logo</item>
        <item>De-Pressão</item>
        <item>Jogo do Framengo com os guri e ouvir skylab</item>
        <item>Entorpecido 🤠👍</item>
        <item>5 anos de curso </item>
        <item>Ganhei dinheiro no tigrinho, estoureiiii demais</item>
        <item>Fazer o L ou a Arminha?</item>
        <item>Falta de dinheiro 💸</item>
    </string-array>

    <!-- Intensidades -->
    <integer-array name="sentimentos_intensidades">
        <item>8</item>
        <item>6</item>
        <item>7</item>
        <item>9</item>
        <item>4</item>
        <item>8</item>
        <item>5</item>
        <item>9</item>
        <item>6</item>
        <item>3</item>
    </integer-array>

    <string name="marcante">Marcante</string>
    <string name="selecione_sentimento">Selecione um sentimento!</string>
    <string name="preencha_obs">Preencha as observações!</string>
    <string name="form_limpo">Formulário limpo!</string>
</resources>
